--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,14 @@
 [flake8]
 max-line-length = 120
 max-complexity = 15
+
+[isort]
+combine_as_imports = True
+enforce_white_space = True
+known_first_party = microcosm_sagemaker
+known_standard_library =
+known_third_party = 
+line_length = 120
+lines_after_imports = 2
+multi_line_output = 3
+include_trailing_comma = True
