--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ combine_as_imports = True
 enforce_white_space = True
 known_first_party = microcosm_sagemaker
 known_standard_library =
-known_third_party = 
+known_third_party = microcosm,boto3
 line_length = 120
 lines_after_imports = 2
 multi_line_output = 3
