--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ force_grid_wrap = 4
 include_trailing_comma = True
 known_first_party = microcosm-sagemaker
 known_standard_library = pkg_resources,dataclasses
-known_third_party = six,hamcrest,nose_parameterized,microcosm,unidecode,nose
+known_third_party = six,hamcrest,nose_parameterized,microcosm,unidecode,nose,boto3
 line_length = 99
 lines_after_imports = 2
 multi_line_output = 3
