--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@
 defaults: &defaults
   working_directory: ~/repo
   docker:
-    - image: ${AWS_ECR_DOMAIN}/globality-build:2019.1.2284
+    - image: ${AWS_ECR_DOMAIN}/globality-build:2019.8.2548
       aws_auth:
         aws_access_key_id: ${AWS_ACCESS_KEY_ID}
         aws_secret_access_key: ${AWS_SECRET_ACCESS_KEY}
@@ -22,13 +22,13 @@ defaults: &defaults
         EXTRA_INDEX_URL: "InjectedDuringRuntime"
         AWS_ECR_DOMAIN: "InjectedDuringRuntime"
         JFROG_AUTH: "InjectedDuringRuntime"
-        JFROG_USERNAME: "InjectedDuringRuntime"
-        JFROG_PASSWORD: "InjectedDuringRuntime"
+        PYPI_USERNAME: "InjectedDuringRuntime"
+        PYPI_PASSWORD: "InjectedDuringRuntime"
 
 deploy_defaults: &deploy_defaults
   working_directory: ~/repo
   docker:
-    - image: ${AWS_ECR_DOMAIN}/globality-build:2019.1.2284
+    - image: ${AWS_ECR_DOMAIN}/globality-build:2019.8.2548
       aws_auth:
         aws_access_key_id: ${AWS_ACCESS_KEY_ID}
         aws_secret_access_key: ${AWS_SECRET_ACCESS_KEY}
@@ -36,8 +36,8 @@ deploy_defaults: &deploy_defaults
         EXTRA_INDEX_URL: "InjectedDuringRuntime"
         AWS_ECR_DOMAIN: "InjectedDuringRuntime"
         JFROG_AUTH: "InjectedDuringRuntime"
-        JFROG_USERNAME: "InjectedDuringRuntime"
-        JFROG_PASSWORD: "InjectedDuringRuntime"
+        PYPI_USERNAME: "InjectedDuringRuntime"
+        PYPI_PASSWORD: "InjectedDuringRuntime"
 
 whitelist: &whitelist
   paths:
@@ -134,15 +134,15 @@ jobs:
           command: |
             echo "[distutils]" > ~/.pypirc
             echo "index-servers =" >> ~/.pypirc
-            echo "    jfrog " >> ~/.pypirc
+            echo "    pypi " >> ~/.pypirc
             echo >> ~/.pypirc
-            echo "[jfrog]" >> ~/.pypirc
-            echo "repository:https://globality.jfrog.io/globality/api/pypi/pypi" >> ~/.pypirc
-            echo "username:$JFROG_USERNAME" >> ~/.pypirc
-            echo "password:$JFROG_PASSWORD" >> ~/.pypirc
+            echo "[pypi]" >> ~/.pypirc
+            echo "repository:https://upload.pypi.org/legacy/" >> ~/.pypirc
+            echo "username:$PYPI_USERNAME" >> ~/.pypirc
+            echo "password:$PYPI_PASSWORD" >> ~/.pypirc
             echo >> ~/.pypirc
-            python setup.py register -r jfrog
-            python setup.py sdist upload -r jfrog
+            python setup.py register -r pypi
+            python setup.py sdist upload -r pypi
 
 workflows:
   version: 2
