--- a/setup.cfg
+++ b/setup.cfg
@@ -7,9 +7,9 @@ combine_as_imports = True
 enforce_white_space = True
 force_grid_wrap = 4
 include_trailing_comma = True
-known_first_party = microcosm-sagemaker
+known_first_party = microcosm_sagemaker
 known_standard_library = pkg_resources,dataclasses
-known_third_party = six,hamcrest,nose_parameterized,microcosm,unidecode,nose,boto3
+known_third_party = six,hamcrest,nose_parameterized,microcosm,unidecode,nose,boto3,microcosm_flask,microcosm_logging,click
 line_length = 99
 lines_after_imports = 2
 multi_line_output = 3
