--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@
 defaults: &defaults
   working_directory: ~/repo
   docker:
-    - image: ${AWS_ECR_DOMAIN}/globality-build:2019.14.3
+    - image: ${AWS_ECR_DOMAIN}/globality-build:2019.16.2
       aws_auth:
         aws_access_key_id: ${AWS_ACCESS_KEY_ID}
         aws_secret_access_key: ${AWS_SECRET_ACCESS_KEY}
@@ -28,7 +28,7 @@ defaults: &defaults
 deploy_defaults: &deploy_defaults
   working_directory: ~/repo
   docker:
-    - image: ${AWS_ECR_DOMAIN}/globality-build:2019.14.3
+    - image: ${AWS_ECR_DOMAIN}/globality-build:2019.16.2
       aws_auth:
         aws_access_key_id: ${AWS_ACCESS_KEY_ID}
         aws_secret_access_key: ${AWS_SECRET_ACCESS_KEY}
@@ -141,8 +141,10 @@ jobs:
             echo "username:$PYPI_USERNAME" >> ~/.pypirc
             echo "password:$PYPI_PASSWORD" >> ~/.pypirc
             echo >> ~/.pypirc
+            version=$(cat .bumpversion.cfg | awk '/current_version / {print $3}')
             python setup.py register -r pypi
-            python setup.py sdist upload -r pypi
+            python setup.py sdist
+            twine upload dist/microcosm-sagemaker-${version}.tar.gz
 
 workflows:
   version: 2
