--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,6 +145,11 @@ jobs:
             python setup.py register -r pypi
             python setup.py sdist
             twine upload dist/microcosm-sagemaker-${version}.tar.gz
+            version=$(python setup.py --version)
+            globality-build dependency-update \
+                --package-name microcosm_sagemaker \
+                --version $version \
+                --language python
 
 workflows:
   version: 2
