--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ combine_as_imports = True
 enforce_white_space = True
 force_grid_wrap = 4
 include_trailing_comma = True
-known_first_party = microcosm-sagemaker
+known_first_party = microcosm_sagemaker
 known_standard_library = pkg_resources,dataclasses
 known_third_party = six,hamcrest,nose_parameterized,microcosm,unidecode,nose
 line_length = 99
