--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@
 defaults: &defaults
   working_directory: ~/repo
   docker:
-    - image: ${AWS_ECR_DOMAIN}/globality-build:2019.16.2
+    - image: ${AWS_ECR_DOMAIN}/globality-build:faaff99432ff46b774e40a2f6a44e628e9955070
       aws_auth:
         aws_access_key_id: ${AWS_ACCESS_KEY_ID}
         aws_secret_access_key: ${AWS_SECRET_ACCESS_KEY}
@@ -28,7 +28,7 @@ defaults: &defaults
 deploy_defaults: &deploy_defaults
   working_directory: ~/repo
   docker:
-    - image: ${AWS_ECR_DOMAIN}/globality-build:2019.16.2
+    - image: ${AWS_ECR_DOMAIN}/globality-build:faaff99432ff46b774e40a2f6a44e628e9955070
       aws_auth:
         aws_access_key_id: ${AWS_ACCESS_KEY_ID}
         aws_secret_access_key: ${AWS_SECRET_ACCESS_KEY}
@@ -145,6 +145,11 @@ jobs:
             python setup.py register -r pypi
             python setup.py sdist
             twine upload dist/microcosm-sagemaker-${version}.tar.gz
+            version=$(python setup.py --version)
+            globality-build dependency-update \
+                --package-name microcosm_sagemaker \
+                --version $version \
+                --language python
 
 workflows:
   version: 2
