--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,8 @@ enforce_white_space = True
 force_grid_wrap = 4
 include_trailing_comma = True
 known_first_party = microcosm_sagemaker
-known_standard_library = dataclasses,pkg_resources
-known_third_party = six,hamcrest,parameterized,microcosm,unidecode,nose
+known_standard_library = pkg_resources,dataclasses,typing
+known_third_party = six,hamcrest,parameterized,microcosm,unidecode,nose,boto3,microcosm_flask,microcosm_logging,click,marshmallow,sklearn,pandas,numpy
 line_length = 99
 lines_after_imports = 2
 multi_line_output = 3
