--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,6 +150,30 @@ jobs:
             eval $(aws ecr get-login --no-include-email)
             docker pull ${AWS_ECR_DOMAIN}/python-library:${CIRCLE_SHA1}
             docker run -it --volumes-from service_tests ${AWS_ECR_DOMAIN}/python-library:${CIRCLE_SHA1} typehinting
+
+  deploy_jfrog_rc:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/repo
+      - run:
+          name: Deploy
+          command: |
+            echo "[distutils]" > ~/.pypirc
+            echo "index-servers =" >> ~/.pypirc
+            echo "    pypi " >> ~/.pypirc
+            echo >> ~/.pypirc
+            echo "[pypi]" >> ~/.pypirc
+            echo "repository:https://upload.pypi.org/legacy/" >> ~/.pypirc
+            echo "username:$PYPI_USERNAME" >> ~/.pypirc
+            echo "password:$PYPI_PASSWORD" >> ~/.pypirc
+            echo >> ~/.pypirc
+            echo >> ~/.pypirc
+            sed  -i '/version \=/s/\".*\"/'"\"0.${CIRCLE_BUILD_NUM}.dev${CIRCLE_BUILD_NUM}\"/" setup.py
+            python setup.py register -r pypi
+            python setup.py sdist
+            twine upload --repository pypi dist/microcosm-sagemaker-${version}.tar.gz
+
   deploy_pypi:
     <<: *defaults
     steps:
@@ -209,6 +233,11 @@ workflows:
             # run for all branches and tags
             tags:
               only: /.*/
+      - deploy_jfrog_rc:
+          requires:
+            - test
+            - lint
+            - typehinting
       - typehinting:
           requires:
             - build_docker
