--- a/.dockerignore
+++ b/.dockerignore
@@ -5,9 +5,10 @@ microcosm_sagemaker/tests
 !entrypoint.sh
 !MANIFEST.in
 !README.md
+!HISTORY.rst
 !requirements.txt
 !setup.py
 !setup.cfg
+!pyproject.toml
 **/*.pyc
 **/*~
-
